--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ p {
     max-width: 300px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border-radius: 20px;
-    
+    padding: 10px;
 }
 
 .fankiLimg { 
