--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     margin: 0;
-    margin-left: 15px;
     background-color: #000000;
     color: white;
 }
@@ -8,6 +7,7 @@ body {
 header {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
+    margin-left: 3%;
 }
 
 p {
@@ -16,9 +16,12 @@ p {
 
 .topchik {
     display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin-left: 5%;
 }
 
-.fankiL {
+.product {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -33,10 +36,18 @@ p {
     align-self: center;
 }
 
+.line1 {
+    display: flex;
+    flex-direction: row;
+    max-height: 60px;
+    align-items: center;
+}
+
 .sale {
     background-color: red;
-    padding: 5px;
     border-radius: 15px;
+    padding-right: 5px;
+    padding-left: 5px;
     width: 35px;
 }
 
@@ -45,18 +56,19 @@ p {
 }
 
 .priceNow {
-    font-size: 25px;
+    font-size: 30px;
     font-weight: bold;
 }
 
 .icon {
-    width: 20px;
+    width: 18px;
     margin-left: 10px;
 }
 
 .bonus {
+    margin-left: 1px;
     color: yellow;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
 }
 
@@ -68,7 +80,7 @@ p {
     color: yellow;
 }
 
-.fankiL:hover {
+.product:hover {
     background: rgb(11,11,11);
     background: linear-gradient(180deg, rgba(11,11,11,1) 0%, rgba(33,27,27,1) 47%, rgba(32,24,24,1) 100%);
 }
@@ -76,6 +88,7 @@ p {
 .line {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .cart {
